[tool.poetry]
name = "praetorian-ssh-proxy"
version = "0.4.0"
description = "SSH proxy server for Praetorian API"
authors = ["Adam Žúrek <adamzurek14@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
paramiko = "^2.7.0"
python-dotenv = "^0.15.0"
praetorian-api-client = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
