[tool.poetry]
name = "praetorian-ssh-proxy"
version = "0.5.0"
description = "SSH proxy server for Praetorian API"
authors = ["Adam Žúrek <adamzurek14@gmail.com>", "Erik Belák <erik.belak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
paramiko = "*"
python-dotenv = "^0.15.0"
praetorian-api-client = {path = "/Users/erikbelak/Documents/Backbone/Praetorian/praetorian-api-client"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
